<resources>
    <string name="app_name">Jan ken</string>
    <string name="new_game_text">New Game</string>
    <string name="vs_text">Vs</string>
    <string name="computer_text">Computer</string>
    <string name="human_text">Human</string>
    <string name="mode_text">Mode</string>
    <string name="no_of_games_text">No of games</string>
    <string name="continue_text">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_icon_text">scan_icon</string>
    <string name="human_icon_text">human_icon</string>
    <string name="computer_icon_text">computer_icon</string>
    <string name="rps_text">RPS</string>
    <string name="rpsls_text">RPSLS</string>
    <string name="_1_text">1</string>
    <string name="backward_arrow_text">backward_arrow</string>
    <string name="forward_arrow_text">forward_arrow</string>
    <string name="challenge__text">Challenge !!</string>
    <string name="copy_icon_text">copy_icon</string>
    <string name="qr_image_text">qr_image</string>
    <string name="back_button_text">back_button</string>
    <string name="rpsls_rules_text">rpsls_rules</string>
    <string name="rps_rules_text">rps_rules</string>
    <string name="mode_text2">Mode :</string>
    <string name="games_text">Games :</string>
    <string name="_1_3">1/3</string>
    <string name="next_round_text">Next round</string>
    <string name="you_picked_text">You Picked</string>
    <string name="the_house_picked_text">The house picked</string>
    <string name="you_win_text">You  Win</string>
    <string name="you_lose_text">You  Lose</string>
    <string name="draw_text">Draw</string>
    <string name="play_again_text">Play again</string>
    <string name="cancel_text">Cancel</string>
    <string name="searching">Searching . . .</string>
    <string name="profile_text">profile_text</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
</resources>