<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment"
    android:paddingHorizontal="20dp"
    android:paddingTop="60dp"
    android:paddingBottom="30dp"
    android:background="@drawable/background_linear_gradient">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vs_computer_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/options_background_selected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poetsen_one"
            android:text="@string/vs_text"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/computer_text"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/computer_icon_text"
            android:src="@drawable/computer_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="65dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vs_human_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/options_background_unselected"
        app:layout_constraintTop_toBottomOf="@+id/vs_computer_button"
        tools:layout_editor_absoluteX="20dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poetsen_one"
            android:text="@string/vs_text"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/human_text"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView1"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/human_icon_text"
            android:src="@drawable/human"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="66dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/mode_button"
        android:layout_height="wrap_content"
        android:text="@string/mode_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:textColor="@color/light_grey"
        android:layout_marginVertical="40dp"
        app:drawableEndCompat="@drawable/info_grey_16"
        app:layout_constraintStart_toStartOf="parent"
        android:drawablePadding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/vs_human_button" />


    <RelativeLayout
        android:id="@+id/selected_background"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/br30"
        android:backgroundTint="@color/white_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mode_button"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/br30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mode_button">

        <TextView
            android:id="@+id/rps_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/poetsen_one"
            android:gravity="center"
            android:text="@string/rps_text"
            android:textColor="@color/very_dark_blue"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/rpsls_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/poetsen_one"
            android:gravity="center"
            android:text="@string/rpsls_text"
            android:textColor="@color/light_grey"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/no_of_games_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:padding="10dp"
        android:text="@string/no_of_games_text"
        android:textColor="@color/light_grey"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_background" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_light_grey"
        app:layout_constraintTop_toBottomOf="@+id/no_of_games_text"
        tools:layout_editor_absoluteX="-35dp">

        <ImageView
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:padding="10dp"
            android:id="@+id/number_of_games_back_button"
            android:contentDescription="@string/forward_arrow_text"
            android:src="@drawable/backward_arrow_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poetsen_one"
            android:text="@string/_1_text"
            android:textColor="@color/white_blue"
            android:textSize="40sp"
            android:textStyle="bold"
            android:id="@+id/display_number_of_games"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:padding="10dp"
            android:contentDescription="@string/backward_arrow_text"
            android:src="@drawable/forward_arrow"
            android:id="@+id/number_of_games_forward_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.67" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="20dp"
        android:text="@string/continue_text"
        android:textColor="@color/dark_blue"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/proceed_to_game"
        />






</androidx.constraintlayout.widget.ConstraintLayout>