<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home_container"
    android:background="@drawable/background_linear_gradient"
    tools:context=".fragments.HomeFragment"
    android:paddingVertical="30dp"
    android:paddingHorizontal="20dp">

    <ImageView
        android:id="@+id/home_scan_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/scan_icon_text"
        android:padding="8dp"
        android:src="@drawable/qr_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poetsen_one"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_game_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/br30"
        app:backgroundTint="@color/white"
        android:textColor="@color/very_dark_blue"
        android:textSize="18sp"
        android:padding="13dp"
        android:textStyle="bold"
        android:id="@+id/new_game_button"
        tools:layout_editor_absoluteX="20dp" />




</androidx.constraintlayout.widget.ConstraintLayout>