<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_linear_gradient"
    android:paddingTop="60dp"
    android:paddingHorizontal="20dp"
    android:id="@+id/play_game_container"
    >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poetsen_one"
        android:text="@string/mode_text2"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/display_game_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poetsen_one"
        android:text="@string/rps_text"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poetsen_one"
        android:text="@string/games_text"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poetsen_one"
        android:text="@string/_1_3"
        android:id="@+id/display_games_played"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_game_mode" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_light_grey"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:layout_editor_absoluteX="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/display_points"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="You:  0"
            android:textColor="@color/light_grey"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.5" />
        <TextView
            android:layout_width="0dp"
            android:id="@+id/display_opponents_points"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Computer:  0"
            android:fontFamily="@font/poppins_bold"

            android:textColor="@color/light_grey"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.5" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout4">


        <include layout="@layout/_2_chips_layout" />

        <include layout="@layout/_3_chips_layout" />

        <include layout="@layout/_5_chips_layout" />

        <TextView
            android:id="@+id/next_round_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/next_round_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone"
            app:drawableEndCompat="@drawable/baseline_keyboard_double_arrow_right_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/display_verdict"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:drawablePadding="20dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/you_win_text"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:visibility="gone"
            app:drawableEndCompat="@drawable/happy_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/play_again_container"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout7"
        tools:layout_editor_absoluteX="20dp">

        <Button
            android:id="@+id/play_back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/background_light_grey"
            android:text="@string/back"
            android:textColor="@color/white"
            app:backgroundTint="@color/zxing_transparent" />

        <TextView
            android:id="@+id/play_again_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/br_5"
            android:backgroundTint="@color/somewhat_dark_blue"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/play_again_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout7"
            tools:layout_editor_absoluteX="20dp" />
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>