<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ShareChallengeFragment"
    android:background="@drawable/background_linear_gradient"
    android:paddingTop="60dp"
    android:paddingHorizontal="20dp"
    >

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/back_button_text"
        android:src="@drawable/back_icon"
        android:id="@+id/share_back_button"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/challenge__text"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_light_grey"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:text="A long placeholer for the link //nmk"
        android:textColor="@color/light_grey"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_vertical"
        android:paddingHorizontal="15dp"
        tools:layout_editor_absoluteX="20dp" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/copy_icon_text"
        android:padding="15dp"
        android:id="@+id/copy_button"
        android:src="@drawable/copy_white"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="40dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:dividerColor="@color/white"
        tools:layout_editor_absoluteX="20dp" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/qr_image_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider" />


</androidx.constraintlayout.widget.ConstraintLayout>